--- a/README.rdoc
+++ b/README.rdoc
@@ -1,16 +1,8 @@
 = action_mailer_test_via_smtp
 
-Description goes here.
+This gem has moved to http://github.com/galaxycats/action_mailer_test_mailing
 
-== Note on Patches/Pull Requests
- 
-* Fork the project.
-* Make your feature addition or bug fix.
-* Add tests for it. This is important so I don't break it in a
-  future version unintentionally.
-* Commit, do not mess with rakefile, version, or history.
-  (if you want to have your own version, that is fine but bump version in a commit by itself I can ignore when I pull)
-* Send me a pull request. Bonus points for topic branches.
+This repository is inactive.
 
 == Copyright
 
